--- a/Env_Config.ipynb
+++ b/Env_Config.ipynb
@@ -63,11 +63,11 @@
    "id": "6bfea944",
    "metadata": {},
    "source": [
-    "可以参考 https://blog.csdn.net/lwplwf/article/details/79881699?ops_request_misc=&request_id=&biz_id=102&utm_term=%E6%98%BE%E5%8D%A1%20cuda%E5%AE%89%E8%A3%85&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-6-.pc_search_result_before_js&spm=1018.2226.3001.4187\n",
+    "可以参考\n https://blog.csdn.net/lwplwf/article/details/79881699?ops_request_misc=&request_id=&biz_id=102&utm_term=%E6%98%BE%E5%8D%A1%20cuda%E5%AE%89%E8%A3%85&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-6-.pc_search_result_before_js&spm=1018.2226.3001.4187\n",
     "\n",
     "我也是在这里跌了好几个跟头才不知怎么回事就装好了，建议多参考博客，如果黑屏或者出现问题可以直接用上一步的启动U盘重装系统。\n",
     "\n",
-    "要注意的一点是，GPU--CUDA--CUDNN的版本要对应，具体可以参考和查看 https://developer.nvidia.com/zh-cn/cuda-gpus"
+    "要注意的一点是，GPU--CUDA--CUDNN的版本要对应，具体可以参考和查看\n https://developer.nvidia.com/zh-cn/cuda-gpus"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "\n",
     "pip install opencv-python\n",
     "\n",
-    "有时候国内网速慢，可以尝试临时换源，具体方法见https://blog.csdn.net/u011505165/article/details/110817296?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162270323516780262512387%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=162270323516780262512387&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-110817296.pc_search_result_before_js&utm_term=pip%E6%B8%85%E5%8D%8E%E6%BA%90&spm=1018.2226.3001.4187\n",
+    "有时候国内网速慢，可以尝试临时换源，具体方法见\nhttps://blog.csdn.net/u011505165/article/details/110817296?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162270323516780262512387%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=162270323516780262512387&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-110817296.pc_search_result_before_js&utm_term=pip%E6%B8%85%E5%8D%8E%E6%BA%90&spm=1018.2226.3001.4187\n",
     "\n",
     "如果采用GPU加速，需要在opencv编译的时候  **选择编译python**\n",
     "\n",
