--- a/Env_Config.ipynb
+++ b/Env_Config.ipynb
@@ -13,7 +13,7 @@
    "id": "ac043a56",
    "metadata": {},
    "source": [
-    "##### 2021届本科毕业生，如有任何问题欢迎联系 QQ：1131448993             \n",
+    "##### 2021届本科毕业生，如有任何问题欢迎联系 QQ：1131448993    或者微信 z1131448993         \n",
     "\n",
     "##### 2021/06/03更新"
    ]
@@ -39,7 +39,7 @@
    "id": "df14a31f",
    "metadata": {},
    "source": [
-    "可以参考 https://zhidao.baidu.com/question/1758752085938823428.html?fr=iks&word=ubuntn+18.04+win10+%CB%AB%CF%B5%CD%B3%B0%B2%D7%B0%CF%EA%CF%B8%BD%CC%B3%CC&ie=gbk"
+    "可以参考 \nhttps://zhidao.baidu.com/question/1758752085938823428.html?fr=iks&word=ubuntn+18.04+win10+%CB%AB%CF%B5%CD%B3%B0%B2%D7%B0%CF%EA%CF%B8%BD%CC%B3%CC&ie=gbk"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "id": "1f782234",
    "metadata": {},
    "source": [
-    "参考ros官网：http://wiki.ros.org/melodic/Installation/Ubuntu\n",
+    "参考ros官网：\n http://wiki.ros.org/melodic/Installation/Ubuntu\n",
     "务必安装对应的ROS版本，比如Ubuntu 18.04对应ROS为Melodic"
    ]
   },
@@ -108,7 +108,7 @@
    "id": "880a10e3",
    "metadata": {},
    "source": [
-    "Opencv版本不同，相关的配置差别会比较大。其中，需要指出的是OpenCV3.4版本和OpenCV4+版本。相比于3.+版本，4.+版本的opencv开始支持Darknet网络的直接调用，这对于YOLO算法的实现的非常方便的。而在ROS系统下，如果采用Darknet-ROS软件包实现YOLO算法，则必须采用OpenCV3.+进行操作。在我的YOLO算法实现中，是使用了python并直接调用opencv与darknet的API实现的目标检测。因此，我的Opencv版本安装为4.1。安装过程可以参考https://blog.csdn.net/weixin_41921520/article/details/97927633"
+    "Opencv版本不同，相关的配置差别会比较大。其中，需要指出的是OpenCV3.4版本和OpenCV4+版本。相比于3.+版本，4.+版本的opencv开始支持Darknet网络的直接调用，这对于YOLO算法的实现的非常方便的。而在ROS系统下，如果采用Darknet-ROS软件包实现YOLO算法，则必须采用OpenCV3.+进行操作。在我的YOLO算法实现中，是使用了python并直接调用opencv与darknet的API实现的目标检测。\n因此，我的Opencv版本安装为4.1。安装过程可以参考https://blog.csdn.net/weixin_41921520/article/details/97927633"
    ]
   },
   {
@@ -118,9 +118,9 @@
    "source": [
     "安装opencv-python可以直接执行 \n",
     "\n",
-    "pip install opencv-python\n",
+    "**pip install opencv-python**\n",
     "\n",
-    "有时候国内网速慢，可以尝试临时换源，具体方法见\nhttps://blog.csdn.net/u011505165/article/details/110817296?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162270323516780262512387%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=162270323516780262512387&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-110817296.pc_search_result_before_js&utm_term=pip%E6%B8%85%E5%8D%8E%E6%BA%90&spm=1018.2226.3001.4187\n",
+    "有时候国内网速慢，可以尝试临时换源，具体方法见\n https://blog.csdn.net/u011505165/article/details/110817296?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162270323516780262512387%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=162270323516780262512387&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-110817296.pc_search_result_before_js&utm_term=pip%E6%B8%85%E5%8D%8E%E6%BA%90&spm=1018.2226.3001.4187\n",
     "\n",
     "如果采用GPU加速，需要在opencv编译的时候  **选择编译python**\n",
     "\n",
